@@ -6,3 +6,4 @@ t/corpus/time.json
 t/corpus/time.toml
 t/corpus/time.yml
 t/corpus/time.xml
+t/corpus/time.pl
