@@ -1,0 +1,2 @@
+$VAR1 = { foo => "bar" }
+
